--- a/style.css
+++ b/style.css
@@ -1,13 +1,56 @@
 
-#container {
-    background: red;
-}
-
 body {               
     background-color: #e5e5e5;
     color: #25282b;
 
-    text-align: center;
+    margin: 0px;
+}
+
+#container {
+    width: 90%;
+    max-width: 980px;
+    
+    margin: 40px auto;
+
+    display: flex;
+
+}
+
+.hide {
+    display: none;
+}
+
+a { 
+    color: #ff5E84;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    
+    text-decoration: underline;
+
+}
+
+#intro {
+    width: 300px;
+
+    margin-right: 20px;
+    
+}
+
+main {
+    margin: 32px 100px 0px 0px;
+
+}
+
+#buttons {
+    display: flex;
+
+    justify-content: space-evenly;
+
+    margin-bottom: 32px;
+
 }
 
 button {
@@ -16,19 +59,69 @@ button {
     font-weight: bold;
 
     background: none;
+
+    cursor: pointer;
+
+    outline: none;
+
+}
+
+button:hover {
+    text-decoration: underline;
 }
 
 button.fat {
     color: white;
     background: #ff5E84;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 6px;
+
+    box-shadow: 0px 8px 16px rgb(255, 0, 92, 0.16);
 }
 
-#footer a {
-    color: #25282B;
+button.fat:hover {
     text-decoration: none;
-
 }
 
-.hide {
-    display: none;
+footer {
+    
+    text-align: center;
+   
+}
+
+
+.idea {
+    display: flex;
+
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 16px -8px rgba(1, 1, 1, 0.1);
+
+
+    padding: 32px;
+
+    margin-bottom: 32px;
+}
+
+.idea img{
+    width: 60px;
+    height: 60px;
+
+    margin-right: 32px;
+}
+
+.idea h3 {
+    margin: 0;
+}
+
+.idea p {
+    margin: 8px 0;
+    color: #777
+}
+
+.idea description {
+    margin: 16px 0;
 }
