--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {               
     background-color: #e5e5e5;
-    color: #25282b;
+    color: black;
 
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
@@ -15,10 +15,6 @@ body {
 
     display: flex;
 
-}
-
-.hide {
-    display: none;
 }
 
 a { 
@@ -160,7 +156,7 @@ footer a{
     display: flex;
     justify-content: center;
 
-
+    transition: 400ms;
 }
 
 #modal .content {
@@ -176,3 +172,108 @@ footer a{
     text-transform: uppercase;
 
 }
+
+#modal form {
+    width: 80%;
+    max-width: 800px;
+
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+.content form div:nth-child(3),
+.content form div:nth-child(4),
+.content form div:nth-child(5) {
+    grid-column: span 2;
+}
+
+form input, 
+form textarea {
+    width: 100%;
+
+    padding: 12px;
+
+    box-sizing: border-box;
+
+    border-radius: 6px;
+    border: 1px solid rgba(141, 25, 52, 0.5);
+
+    outline: none;
+
+    font-size: 16px;
+
+    font-family: 'Montserrat', sans-serif;
+}
+
+form label {
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0.8px;
+}
+
+form a {
+    
+    width: 150px;
+    height: 40px;
+    
+    background-color: #ffffff22;
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 14px;
+    font-weight: bold;
+
+    border-radius: 6px;
+
+    align-self: end;
+
+    transition: 400ms;
+}
+
+form a:hover {
+    background: #fff;
+    color: #ff5E84;
+
+    text-decoration: none;
+}
+
+form button {
+
+    background: white;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 6px;
+
+    cursor: pointer;
+
+    margin-top: 32px;
+    
+    grid-column: 2;
+    justify-self: end;
+
+    transition: 400ms;
+}
+
+form button:hover {
+    background-color: #0984e3;
+    color: white;
+    text-decoration: none;
+}
+
+
+#modal.hide {
+    opacity: 0;
+    visibility: hidden;
+}
+
+
+
