Criação do indeias.html
Criei a página resposável por mostrar as ideias

--- a/style.css
+++ b/style.css
@@ -275,5 +275,9 @@ form button:hover {
     visibility: hidden;
 }
 
+/*Ideias.html*/
 
-
+header {
+    display: flex;
+    justify-content: space-between;
+}
