--- a/backup/style.css
+++ b/backup/style.css
@@ -1,10 +1,14 @@
-
+/*globais*/
 body {               
     background-color: #e5e5e5;
     color: black;
 
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
+}
+
+body.hideScroll {
+    overflow: hidden;
 }
 
 #container {
@@ -35,10 +39,36 @@ p, .description {
     letter-spacing: 0.1px;
 }
 
+.button {
+    color: white;
+    background: #ff5E84;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 8px;
+
+    font-size: 14px;
+    font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: 0px 8px 16px rgb(255, 0, 92, 0.16);
+}
+
+.button:hover {
+    text-decoration: none;
+    background-color: #0984e3;
+}
+
+
+/*padrão*/
 #intro {
     width: 300px;
 
-    margin-right: 20px;
+    margin-right: 64px;
     
 }
 
@@ -78,26 +108,14 @@ button:hover {
     text-decoration: underline;
 }
 
-button.fat {
-    color: white;
-    background: #ff5E84;
 
-    width: 150px;
-    height: 40px;
-
-    border-radius: 6px;
-
-    box-shadow: 0px 8px 16px rgb(255, 0, 92, 0.16);
-}
-
-button.fat:hover {
-    text-decoration: none;
-}
 
 footer {
     
     text-align: center;
-   
+
+    margin-bottom: 15px;
+
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
@@ -144,14 +162,17 @@ footer a{
     margin: 16px 0;
 }
 
+
+/*modal*/
 #modal {
     background: #ff5E84;
 
     position: absolute;
     top: 0;
-    
-    width: 100vw;
-    height: 100vw;
+
+    bottom: 0;
+    right: 0;
+    left: 0;
 
     display: flex;
     justify-content: center;
@@ -159,8 +180,12 @@ footer a{
     transition: 400ms;
 }
 
+#modal.addScroll {
+    overflow: auto;
+}
+
 #modal .content {
-    margin-top: 128px;
+    margin-top: 15px;
 
     color: white;
     
@@ -177,7 +202,7 @@ footer a{
     width: 80%;
     max-width: 800px;
 
-    margin: 0 auto;
+    margin: 0 auto 15%;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -277,7 +302,69 @@ form button:hover {
 
 /*Ideias.html*/
 
-header {
+#page-ideas #container {
+    display: block;
+}
+
+#page-ideas header {
     display: flex;
     justify-content: space-between;
+}
+
+#page-ideas nav {
+    display: flex;
+
+    align-items: center;
+}
+
+#page-ideas nav li {
+    list-style: none;
+
+    margin-right: 16px;
+}
+
+#page-ideas nav li a{
+    color: #25282b;
+}
+
+#page-ideas nav li a.button{
+    color: white;
+}
+
+#page-ideas nav li:last-child {
+    margin: 0;
+}
+
+section#title {
+    text-align: center;
+
+    margin: 64px 0;
+}
+
+section#title p {
+    opacity: 0.7;
+    margin: 0;
+}
+
+section#title h1 {
+    margin: 0;
+
+    font-size: 28px;
+}
+
+section#ideas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+section#ideas .idea {
+    margin: 0;
+}
+
+section#ideas, 
+section#title, 
+footer {
+    margin-top: 64px;
 }
