--- a/views/ideias.html
+++ b/views/ideias.html
@@ -11,11 +11,11 @@
     
     <div id="container">
         <header>
-            <a href="index.html">
+            <a href="/">
                 <img src="images/logo.png" alt="Imagem da Logomarca">
             </a>
             <nav>
-                <li><a href="index.html">Início</a></li>
+                <li><a href="/">Início</a></li>
                 <li><a href="#" onclick="onOff()" class="button">Nova Ideia</a></li>
             </nav>
         </header>
