--- a/views/index.html
+++ b/views/index.html
@@ -6,10 +6,12 @@
         <title>Casa Crativa</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
 
     <body>
+
+        <!--Para criar variável {{variavel}}-->
 
         <div id="container">
 
@@ -37,7 +39,7 @@
 
                 <section id="buttons">
                     <button onclick="onOff()">+ Adicionar Ideia</button>
-                    <a href="ideias.html" class="button">Ver Ideias</a>
+                    <a href="/ideias" class="button">Ver Ideias</a>
                 </section>
 
                 <footer id="footer">
@@ -129,7 +131,7 @@
                 </form>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="/script.js"></script>
     </body>
 
 </html>
