--- a/views/ideias.html
+++ b/views/ideias.html
@@ -26,61 +26,21 @@
         <main>
             <section id="ideas">
     
+            {% for idea in ideas %}
                 <div class="idea">
-                    <img src="https://image.flaticon.com/icons/svg/2729/2729007.svg" alt="Imagem de curso de programação">
-    
+                    <img src="{{idea.img}}" alt="Imagem de {{idea.title}}">
+
                     <div class="content">
-                        <h3>Cursos de Programação</h3>
-                        <p>Estudo</p>
+                        <h3>{{idea.title}}</h3>
+                        <p>{{idea.category}}</p>
                         <div class="description">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias suscipit repellendus dolore, harum nostrum fuga facere! Deleniti, asperiores soluta recusandae laborum omnis possimus mollitia dolore itaque voluptatem deserunt placeat aperiam.
+                            {{idea.description}}
                         </div>
-                        <a href="#">Ir para a Ideia</a>
+                        <a href="{{idea.url}}" target="_blank">Ir para a Ideia</a>
                     </div>
                 </div>
-    
-                <div class="idea">
-                    <img src="https://image.flaticon.com/icons/svg/2729/2729005.svg" alt="Imagem de Exercícios">
-    
-                    <div class="content">
-                        <h3>Exercícios</h3>
-                        <p>Saúde</p>
-                        <div class="description">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias suscipit repellendus dolore, harum nostrum fuga facere! Deleniti, asperiores soluta recusandae laborum omnis possimus mollitia dolore itaque voluptatem deserunt placeat aperiam.
-                        </div>
-                        <a href="#">Ir para a Ideia</a>
-                    </div>
-                </div>
-    
-                <div class="idea">
-                    <img src="https://image.flaticon.com/icons/svg/2729/2729027.svg" 
-                    alt="Imagem de Meditação">
-    
-                    <div class="content">
-                        <h3>Meditação</h3>
-                        <p>Mentalidade</p>
-                        <div class="description">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias suscipit repellendus dolore, harum nostrum fuga facere! Deleniti, asperiores soluta recusandae laborum omnis possimus mollitia dolore itaque voluptatem deserunt placeat aperiam.
-                        </div>
-                        <a href="#">Ir para a Ideia</a>
-                    </div>
-                </div> 
-                
-                <div class="idea">
-                    <img src="https://image.flaticon.com/icons/svg/2729/2729032.svg" 
-                    alt="Imagem de Karaokê">
-    
-                    <div class="content">
-                        <h3>Karaokê</h3>
-                        <p>Diversão em família</p>
-                        <div class="description">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias suscipit repellendus dolore, harum nostrum fuga facere! Deleniti, asperiores soluta recusandae laborum omnis possimus mollitia dolore itaque voluptatem deserunt placeat aperiam.
-                        </div>
-                        <a href="#">Ir para a Ideia</a>
-                    </div>
-                </div> 
+            {% endfor %}
                     
-                </div>
             </section>
         </main>
         <footer id="footer">
