--- a/views/ideias.html
+++ b/views/ideias.html
@@ -1,93 +1,37 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
+<!--
+<title>Ideis - Casa Criativa</title>
+<body id="page-ideas"-->
+
+    
+{% extends "layout.html" %}
+    
+{% set bodyId = "page-ideas" %}
+
+{% block title %}
     <title>Ideis - Casa Criativa</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body id="page-ideas">
-    
-    <div id="container">
-        <header>
-            <a href="/">
-                <img src="images/logo.png" alt="Imagem da Logomarca">
-            </a>
-            <nav>
-                <li><a href="/">Início</a></li>
-                <li><a href="#" onclick="onOff()" class="button">Nova Ideia</a></li>
-            </nav>
-        </header>
-        <section id="title">
-            <p>em exibição</p>
-            <h1>Ideias</h1>
-        </section>      
-        <main>
-            <section id="ideas">
-    
-            {% for idea in ideas %}
-                <div class="idea">
-                    <img src="{{idea.img}}" alt="Imagem de {{idea.title}}">
-
-                    <div class="content">
-                        <h3>{{idea.title}}</h3>
-                        <p>{{idea.category}}</p>
-                        <div class="description">
-                            {{idea.description}}
-                        </div>
-                        <a href="{{idea.url}}" target="_blank">Ir para a Ideia</a>
-                    </div>
-                </div>
-            {% endfor %}
-                    
-            </section>
-        </main>
-        <footer id="footer">
-            Com ❤ <a href="https://github.com/gabriel-bianchessi" target="blank">Gabriel Bianchessi</a>
-        </footer>
-    </div>
+{% endblock title %}
 
 
-    <!--Modal-->
-    <div id="modal" class="hide">
-        <div class="content">
-            <h1>Nova ideia</h1>
-
-            <form action="">
-
-                <div class="input-wrapper">
-                    <label for="title">Título da Ideia</label>
-                    <input type="text" name="title">
-                </div>
-
-                <div class="input-wrapper">
-                    <label for="category">Categoria</label>
-                    <input type="text" name="category">
-                </div>
-
-                <div class="input-wrapper">
-                    <label for="image">Link da Imagem</label>
-                    <input type="url" name="image">
-                </div>
-
-                <div class="input-wrapper">
-                    <label for="description">Digite uma descriação para a Ideia</label>
-                    <textarea name="description" cols="30" rows="10"></textarea>
-                </div>
-
-                <div class="input-wrapper">
-                    <label for="link">Link da Ideia</label>
-                    <input type="url" name="link">
-                </div>
-
-                <a href="#" onclick="onOff()">Voltar</a>
-                <button>Salvar</button>         
-            </form>
-        </div>
-    </div>
-    <script src="script.js"></script>
-
-</body>
-</html>
-
+{% block content %}
+<header>
+    <a href="/">
+        <img src="images/logo.png" alt="Imagem da Logomarca">
+    </a>
+    <nav>
+        <li><a href="/">Início</a></li>
+        <li><a href="#" onclick="onOff()" class="button">Nova Ideia</a></li>
+    </nav>
+</header>
+<section id="title">
+    <p>em exibição</p>
+    <h1>Ideias</h1>
+</section>      
+<main>
+    <section id="ideas">
+        {% include "all_ideas.html" %}      
+    </section>
+</main>
+<footer id="footer">
+    Com ❤ <a href="https://github.com/gabriel-bianchessi" target="blank">Gabriel Bianchessi</a>
+</footer>
+{% endblock %}
