--- a/views/index.html
+++ b/views/index.html
@@ -1,117 +1,41 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends "layout.html" %}
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Casa Crativa</title>
+{% block content %}
 
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/style.css">
-    </head>
-
-    <body>
-
-        <!--Para criar variável {{variavel}}-->
-
-
-        <div id="container">
-
-            <section id="intro">
+<section id="intro">
                
-                <header>
-                    <a href="/">
-                        <img src="images/logo.png" alt="Imagem da Logomarca">
-                    </a>
-                </header>
-               
-                <main>
-                    <p>
-                        Ficar em casa em períodos longos, não deve ser nada fácil.
-                    </p>
-            
-                    <p>
-                        Por isso, iremos catalogar ideias, <strong>brincadeiras, jogos, filmes, livros, cursos, dicas</strong> e tudo que for necessário para tornar esse momento mais interessante.
-                    </p>
-            
-                    <p>
-                        Comece clicando em ver ideias para ver as  ideias cadastradas e contribua adicioando a sua ideia.
-                    </p>
-                </main>
+    <header>
+        <a href="/">
+            <img src="images/logo.png" alt="Imagem da Logomarca">
+        </a>
+    </header>
+   
+    <main>
+        <p>
+            Ficar em casa em períodos longos, não deve ser nada fácil.
+        </p>
 
-                <section id="buttons">
-                    <button onclick="onOff()">+ Adicionar Ideia</button>
-                    <a href="/ideias" class="button">Ver Ideias</a>
-                </section>
+        <p>
+            Por isso, iremos catalogar ideias, <strong>brincadeiras, jogos, filmes, livros, cursos, dicas</strong> e tudo que for necessário para tornar esse momento mais interessante.
+        </p>
 
-                <footer id="footer">
-                    Com ❤ <a href="https://github.com/gabriel-bianchessi" target="blank">Gabriel Bianchessi</a>
-                </footer>
-            </section>
-            
-            <section id="last-ideas">
+        <p>
+            Comece clicando em ver ideias para ver as  ideias cadastradas e contribua adicioando a sua ideia.
+        </p>
+    </main>
 
+    <section id="buttons">
+        <button onclick="onOff()">+ Adicionar Ideia</button>
+        <a href="/ideias" class="button">Ver Ideias</a>
+    </section>
 
-                {% for idea in ideas %}
-                    <div class="idea">
-                        <img src="{{idea.img}}" alt="Imagem de {{idea.title}}">
+    <footer id="footer">
+        Com ❤ <a href="https://github.com/gabriel-bianchessi" target="blank">Gabriel Bianchessi</a>
+    </footer>
+</section>
 
-                        <div class="content">
-                            <h3>{{idea.title}}</h3>
-                            <p>{{idea.category}}</p>
-                            <div class="description">
-                                {{idea.description}}
-                            </div>
-                            <a href="{{idea.url}}" target="_blank">Ir para a Ideia</a>
-                        </div>
-                    </div>
-                {% endfor %}
+<section id="last-ideas">
+    {% include "all_ideas.html" %}
+</section>
 
-
-                </div>     
-                    
-                </div>
-            </section>
-        </div>
-
-        <!-- Modal -->
-
-        <div id="modal" class="hide">
-            <div class="content">
-                <h1>Nova ideia</h1>
-
-                <form action="">
-
-                    <div class="input-wrapper">
-                        <label for="title">Título da Ideia</label>
-                        <input type="text" name="title">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="category">Categoria</label>
-                        <input type="text" name="category">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="image">Link da Imagem</label>
-                        <input type="url" name="image">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="description">Digite uma descriação para a Ideia</label>
-                        <textarea name="description" cols="30" rows="10"></textarea>
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="link">Link da Ideia</label>
-                        <input type="url" name="link">
-                    </div>
-
-                    <a href="#" onclick="onOff()">Voltar</a>
-                    <button>Salvar</button>         
-                </form>
-            </div>
-        </div>
-        <script src="/script.js"></script>
-    </body>
-
-</html>
+{% endblock %}
